--- a/assets/score_control.html
+++ b/assets/score_control.html
@@ -42,7 +42,7 @@
 	<br />
 
 	<input type="submit" value="Update Scoreboard" />
-	<input type="button" class="finishMatchButton" value="Swap Sides" />
+	<input type="button" class="swapSidesButton" value="Swap Sides" />
 	<hr />
 	<input type="reset" value="Reset Scoreboard" />
 </form>
